--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'kilzm.androidcallgraph.App'
+    mainClass = 'kilzm.androidcallgraph.CallGraphAnalysis'
 }
 
 tasks.named('test') {
