--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,3 +32,7 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+tasks.named('run') {
+    enableAssertions = true;
+}
